css/style.css
/* ... */
.goods-content {
  width: 700px;
  margin-left: 20px;
}

.goods-articles {
  display: flex;
}

.sorting {
  padding: 7px 19px 9px 19px;
  display: flex;
  background-color: #f7f3ec;
  font-family: "PT Sans", "Tahoma", sans-serif;
  font-size: 13px;
  line-height: 1.38;
}

.sorting-type__one {
  display: flex;
  margin-left: 142px;
  list-style: none;
}

.sorting-type__one li {
  text-transform: uppercase;
  padding-left: 3px;
  margin-right: 71px;
}

.sorting-type__one li:last-child {
  margin-right: 0;
}

.sorting-type__one a:last-child {
  margin-left: -6px;
}

.sorting-type__one a {
  color: rgba(0, 0, 0, 0.3);
  border-bottom: 1px dotted #ee3643;
}

.sorting-type__one a:hover {
  color: #000000;
  border-bottom: 1px solid #ee3643;
}

.sorting-active a {
  margin-right: 1px;
}

.sorting-active a,
.sorting-active a:hover,
.sorting-active a:active {
  color: #ee3643;
  border-bottom: none;
  cursor: default;
}

.sorting-type__second {
  display: flex;
  margin-left: auto;
  list-style: none;
  padding-top: 2px;
}

.sorting-type__second li:first-child {
  margin-right: 19px;
}

.sorting-arrow {
  fill: #c5c5c5;
}

.sorting-arrow:hover {
  fill: #000000;
}

.active-arrow,
.active-arrow:hover {
  fill: #ee3643;
  cursor: default;
}

.breadcrumbs {
  display: flex;
  list-style: none;
  margin-top: 21px;
  padding-top: 1px;
  font-family: "PT Sans", "Tahoma", sans-serif;
}

.breadcrumbs a {
  margin-right: 14px;
  text-transform: uppercase;
}

.breadcrumbs a {
  color: #000000;
}

.breadcrumbs-arrow {
  margin-top: 3px;
  margin-right: 15px;
  border: solid #D9DCE0;
  border-width: 0 1px 1px 0;
  display: inline-block;
  vertical-align: top;
  width: 8px;
  height: 8px;
  padding: 3px;
  transform: rotate(-45deg);
}

.block-h1 {
  background-color: #f2f6f8;
  padding: 31px 30px;
  margin-top: 19px;
}

.block-h1 .catalog-title {
  margin: 0;
  color: #32425c;
  text-transform: uppercase;
}

.filter-price {
  border: none;
  margin: 0;
  padding: 0;
}

.filter-brands {
  border: none;
  border-top: 1px solid #EBEBEB;
  margin: 0;
  padding: 0;
  margin-top: 25px;
  padding-top: 23px;
  font-family: "PT Sans", "Tahoma", sans-serif;
}

.filter-power {
  border: none;
  border-top: 1px solid #EBEBEB;
  margin: 0;
  padding: 0;
  margin-top: 7px;
  padding-top: 23px;
  font-family: "PT Sans", "Tahoma", sans-serif;
}

.filter-brands label {
  display: flex;
  margin-bottom: 16px;
}




.pagination-block {
  margin-top: 50px;
}

.pagination {
  list-style: none;
  display: flex;
  font-family: "PT Sans", "Tahoma", sans-serif;
  font-size: 13px;
}

.pagination li {
  margin-right: 9px;
}

.pagination a {
  display: inline-block;
  vertical-align: top;
  min-width: 38px;
  padding: 11px 15px;
  border: 1px solid #e5e5e5;
  border-radius: 3px;
  color: #000000;
}

.pagination a:hover {
  border-color: #bdc6ca;
}

.pagination a:active {
  border-color: #ee3643;
}


.pagination-next a {
  padding: 11px 31px;
  text-transform: uppercase;
}

.pagination-active a {
  background-color: #ee3643;
  color: #ffffff;
  border: 1px solid #ee3643;
}

.pagination-active a:hover {
  border-color: #ee3643;
}

.catalog-about {
  margin-top: 59px;
  padding: 62px 0 69px 0;
  background-color: #f4f7f9;
}

.catalog-about__h2 {
  font-size: 30px;
  font-weight: normal;
  letter-spacing: 0.155px;
  text-transform: uppercase;
}

.catalog-about__text {
  margin-top: 24px;
  font-size: 13px;
  font-family: "PT Sans", "Tahoma", sans-serif;
  font-weight: normal;
  line-height: 1.85;
  letter-spacing: 0.155px;
}

.visually-hidden {
  display: none;
}

.map-company__button {
  width: 300px;
  min-height: 38px;
  padding-left: 16px;
}

.about-company__button {
  width: 220px;
  min-height: 38px;
}


.section-header__link {
  width: 253px;
  min-height: 38px;
  margin-right: -2px;
}

.footer-block__email {
  padding-top: 2px;
  margin-left: auto;
  padding-right: 52px;
}


.footer-block__info {
  padding-top: 2px;
  padding-right: 14px;
}

@keyframes bounce {
  0% {
    transform: translate(-50%, -2000px);
  }

  70% {
    transform: translate(-50%, 30px);
  }

  90% {
    transform: translate(-50%, -10px);
  }

  100% {
    transform: translate(-50%, -50%);
  }
}

@keyframes shake {

  0%,
  100% {
    transform: translate(-50%, -50%);
  }

  10%,
  30%,
  50%,
  70%,
  90% {
    transform: translate(-51%, -50%);
  }

  20%,
  40%,
  60%,
  80% {
    transform: translate(-49%, -50%);
  }
}

.modal {
  box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: #fff;
  z-index: 999;
  display: none;
}

.modal-show {
  display: block;
  animation: bounce 0.6s;
}

.modal-error {
  animation: shake 0.6s;
}

.search-label {
  position: absolute;
  top: -200px;
}

.map-modal {
  width: 940px;
  height: 447px;
}

.map-modal iframe {
  width: 100%;
  height: 100%;
}

.close-modal {
  position: absolute;
  top: 9px;
  right: 9px;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.write-us {
  width: 620px;
  min-height: 430px;
  border-top: 7px solid #FD545B;
  padding-top: 48px;
  font-size: 18px;
}

.write-us__input {
  display: flex;
  justify-content: center;
  margin-bottom: 22px;
}

.write-us__input input {
  display: block;
  width: 220px;
  min-height: 38px;
  margin: 0 10px;
  border: 2px solid #dee3e4;
  border-radius: 3px;
  padding: 15px;
  font-size: 13px;
}

.write-us__input input:focus,
.write-us__textarea textarea:focus {
  border-color: #EC3847;
  outline: none;
}

.write-us__input input::placeholder {
  font-family: "PT Sans", "Tahoma", sans-serif;
  color: #a9a9a9;
}


.write-us__textarea {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 37px;
}

.write-us__textarea textarea {
  display: block;
  width: 460px;
  min-height: 114px;
  border: 2px solid #dee3e4;
  border-radius: 3px;
  padding: 15px;
  font-size: 13px;
}
/* ... */

